--- a/index.html
+++ b/index.html
@@ -20,3 +20,12 @@
             </div>
             <button type="button" class="btn btn-header btn-play">&#9658;</button>
         </header>
+        <section class="content-section container">
+            <h2 class="section-header">PRODUCTS</h2>
+            <div>
+                <div class="product-row">
+                    <span class="product-item tour-date">TBD</span>
+                    <span class="product-item tour-city">TBD</span>
+                    <span class="product-item tour-arena">TBD</span>
+                    <button type="button" class="product-item product-btn btn btn-primary">BUY</button>
+                </div>
