--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">Piece of Cake</h1>
+            <h1 class="store-name store-name-large">Piece of Cake</h1>
             <div class="container">
                 <button type="button" class="btn btn-header">Buy Our Products</button>
             </div>
@@ -29,3 +29,28 @@
                     <span class="product-item tour-arena">TBD</span>
                     <button type="button" class="product-item product-btn btn btn-primary">BUY</button>
                 </div>
+            </section>
+            <footer class="main-footer">
+                <div class="container main-footer-container">
+                    <h3 class="store-name">Piece of Cake</h3>
+                    <ul class="nav footer-nav">
+                        <li>
+                            <a href="https://www.youtube.com" target="_blank">
+                                <img src="Images/YouTube Logo.png">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.spotify.com" target="_blank">
+                                <img src="Images/Spotify Logo.png">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" target="_blank">
+                                <img src="Images/Facebook Logo.png">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </footer>
+        </body>
+    </html>
