--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
         </header>
         <section class="content-section container">
             <h2 class="section-header">ABOUT</h2>
+            <p>From the beginning, Piece of Cake Bakery is known as bakery unique for our amazingly made cupcakes and cakes. We take pride in using natural ingredients in our cupcakes, cakes and desserts. Our treats are as deliciously wholesome as they are beautifully decorated. Choose from our signature cupcakes, weekly and holiday specials or custom created desserts.</p>
             <img class="about-store-image" src="images/photo1jpg.jpeg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum nulla accusantium perferendis quam explicabo odit quisquam ea natus? Saepe ducimus, minima error alias dolorum consectetur officia architecto voluptatem iure sunt eveniet nam, recusandae explicabo, itaque vel autem. Accusamus suscipit sit labore sed blanditiis a est rem harum expedita veritatis numquam voluptatibus dolore voluptatum sunt repellendus explicabo, excepturi beatae perferendis. Numquam dicta quis ipsum explicabo suscipit alias placeat, ea, vero minus ducimus voluptatibus iste repellendus deleniti? Eos, quas! Voluptatem tempora explicabo, corrupti dolor hic iure quo, ipsum voluptates quaerat omnis accusamus et vel, necessitatibus doloribus optio. Odio nobis ad molestias.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit maiores suscipit magni id harum consequuntur quas delectus culpa, saepe nostrum, autem ullam! Assumenda molestiae reprehenderit sunt ducimus id saepe porro vitae asperiores eum accusantium? Illum aliquid excepturi magni quos.</p>
+            <p>Piece of Cake Bakery offers a homestyle bakery experience in the Washington area. Our vision is to create upscale, quick-serve bakery with a focus on simple and satisfying souther style desserts and baked goods. Our philosophy is to offer simple and delicious desserts that are easily accessible to clients via location or delivery options. Our ingredients are high quality; each dessert is carefully made with only the finest, all-natural ingredients.</p>
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
