--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
+                <hr>
             </nav>
             <h1 class="store-name store-name-large">Piece of Cake</h1>
             <div class="container">
@@ -24,7 +25,7 @@
             <h2 class="section-header">PRODUCTS</h2>
             <div>
                 <div class="product-row">
-                    <span class="product-item tour-date">TBD</span>
+                    <span class="product-item item-list">TBD</span>
                     <span class="product-item tour-city">TBD</span>
                     <span class="product-item tour-arena">TBD</span>
                     <button type="button" class="product-item product-btn btn btn-primary">BUY</button>
