--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
+            <hr>
             <h1 class="store-name store-name-large">Piece of Cake</h1>
         </header>
         <section class="content-section container">
@@ -27,18 +28,18 @@
                 <h3 class="band-name">Piece of Cake</h3>
                 <ul class="nav footer-nav">
                     <li>
-                        <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/YouTube Logo.png">
+                        <a href="https://www.twitter.com" target="_blank">
+                            <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.spotify.com" target="_blank">
-                            <img src="Images/Spotify Logo.png">
+                        <a href="https://www.yelp" target="_blank">
+                            <img src="images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
-                            <img src="Images/Facebook Logo.png">
+                            <img src="images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
                         </a>
                     </li>
                 </ul>
