--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
-                <hr>
             </nav>
             <h1 class="store-name store-name-large">Piece of Cake</h1>
             <div class="container">
@@ -35,18 +34,18 @@
                     <h3 class="store-name">Piece of Cake</h3>
                     <ul class="nav footer-nav">
                         <li>
-                            <a href="https://www.youtube.com" target="_blank">
-                                <img src="Images/YouTube Logo.png">
+                            <a href="https://www.twitter.com" target="_blank">
+                                <img src="images/2-27646_twitter-logo-png-transparent-background-logo-twitter-png.png" width="25px" height="25px" alt="twitter">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.spotify.com" target="_blank">
-                                <img src="Images/Spotify Logo.png">
+                            <a href="https://www.yelp.com" target="_blank">
+                                <img src="images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
                             </a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="Images/Facebook Logo.png">
+                                <img src="images/Facebook-logo.png" width="25px" height="25px" alt="facebook">
                             </a>
                         </li>
                     </ul>
