--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.yelp" target="_blank">
+                        <a href="https://www.yelp.com" target="_blank">
                             <img src="images/Yelp-Logo.png" width="25px" height="25px" alt="yelp">
                         </a>
                     </li>
