--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div>
                 <div class="product-row">
                     <span class="product-item item-list">TBD</span>
-                    <span class="product-item tour-city">TBD</span>
-                    <span class="product-item tour-arena">TBD</span>
+                    <span class="product-item item-list">TBD</span>
+                    <span class="product-item item-list">TBD</span>
                     <button type="button" class="product-item product-btn btn btn-primary">BUY</button>
                 </div>
             </section>
